# python-template

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  setup.cfg  tox.ini
.github/workflows/: tests.yml
python_template/: product.py
tests/: main_test.py  multiply_two_nums_test.py
