[metadata]
name = python_template
version = 0.1.0
description = minimal Python project template.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/masaaldosey/python-template
author = Leela Kondamadugula
author_email = prabhatreddyk@gmail.com
license = MIT
license_files = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    product-cli=python_template.product:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
